Project1-ApacheInAWS/main.tf
provider "aws" {
  region = "us-east-1"
  access_key = "" # Not recommended
  secret_key = "" # Not recommended
}

# resource "aws_instance" "my_server" {
#   ami           = "ami-0440d3b780d96b29d"
#   instance_type = "t2.micro"

#   tags = {
#     Name = "EC2 instance"
#   }
# }

# resource "aws_vpc" "my_vpc" {
#   cidr_block = "10.0.0.0/16"
#   tags = {
#     Name = "my_vpc"
#   }
# }

# resource "aws_subnet" "subnet_1" {
#   vpc_id     = aws_vpc.my_vpc.id
#   cidr_block = "10.0.1.0/24"

#   tags = {
#     Name = "my_subnet"
#   }
# }

variable "subnet_prefix" {
  description = "CIDR block of subnet"
  # default
  type = string #Any, if you don't know which type you are using
}

# 1. Custom vpc
resource "aws_vpc" "prod_vpc" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "prod_vpc"
  }
}

# 2. Create Internet Gateway
resource "aws_internet_gateway" "prod_gw" {
  vpc_id = aws_vpc.prod_vpc.id

  tags = {
    Name = "prod_internet_gateway"
  }
}

# 3. Create a custom route table
resource "aws_route_table" "prod_rt" {
  vpc_id = aws_vpc.prod_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.prod_gw.id
  }

  route {
    ipv6_cidr_block        = "::/0"
    gateway_id = aws_internet_gateway.prod_gw.id
  }

  tags = {
    Name = "prod_route_table"
  }
}

# 4. Create a subnet 

resource "aws_subnet" "prod_subnet" {
  vpc_id     = aws_vpc.prod_vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1a" 

  tags = {
    Name = "prod_subnet"
  }
}


# 5. Associate subnet with route table
resource "aws_route_table_association" "prod_a" {
  subnet_id      = aws_subnet.prod_subnet.id
  route_table_id = aws_route_table.prod_rt.id
}

# 6. Create security group to allow port 
resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow TLS inbound traffic and all outbound traffic"
  vpc_id      = aws_vpc.prod_vpc.id

  ingress {
    description = "HTTPS"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }


  tags = {
    Name = "allow_web"
  }
}


# 7. Create a network interface with an ip in the subnet that was create in step 4
resource "aws_network_interface" "prod_server_nic" {
  subnet_id       = aws_subnet.prod_subnet.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]
}
# 8. Assign an elastic IP to the network interface created in step 7
resource "aws_eip" "one" {
  domain                    = "vpc"
  network_interface         = aws_network_interface.prod_server_nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on = [ aws_internet_gateway.prod_gw ]
}

output "server_public_ip" {
  value = aws_eip.one.public_ip  
}
# 9. Create Ubuntu server and install/enable apache
resource "aws_instance" "web_server_instance" {
    ami           = "ami-0440d3b780d96b29d"
    instance_type = "t2.micro"
    availability_zone = "us-east-1a"
    key_name = "main-key"
    network_interface {
      device_index = 0
      network_interface_id = aws_network_interface.prod_server_nic.id
    }
    user_data = <<-EOF
        #!/bin/bash
        sudo apt update -y 
        sudo apt install apache2 -y
        sudo systemctl start apache2
        sudo bash -c 'echo my first web server > /var/www/html/index.html'
        EOF
    
    tags = {
        Name = "web-server"
    }
}
